--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 body {
-  background: linear-gradient(to right, #b92b27, #1565c0);
+  /* background: linear-gradient(to right, #b92b27, #1565c0); */
   background-image: url("code.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -94,4 +94,44 @@ button {
 .info h3 {
   margin-bottom: 14px;
   font-family: "Chakra Petch", sans-serif;
+}
+
+/* Media queries  */
+
+@media only screen and (max-width: 480px) {
+  nav {
+    max-height: 120px;
+    display: flex;
+    flex-direction: column;
+  }
+  body {
+    background: linear-gradient(to right, #b92b27, #1565c0);
+    background-image: url("https://media3.giphy.com/media/d2Z6aAm3Z2GdLrHi/giphy.gif");
+
+    background-size: cover;
+  }
+  .card {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.9;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .card h1 {
+    margin-top: 30px;
+  }
+  .card img {
+    height: 140px;
+    margin-bottom: 20px;
+    margin-top: -30px;
+  }
+  .info-div {
+    display: flex;
+    flex-direction: column;
+  }
 }
