responsive fixed for mobile device

--- a/style.css
+++ b/style.css
@@ -111,6 +111,8 @@ button {
     background-size: cover;
   }
   .card {
+    margin-top: 10px;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     height: auto;
